// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders component 1`] = `
<div>
  <button
    class="
        undefined
        button 
        button--primary
        button--auto
        "
  >
    Click me
  </button>
</div>
`;

exports[`Button Component renders with different children 1`] = `
<div>
  <button
    class="
        undefined
        button 
        button--primary
        button--auto
        "
  >
    Submit
  </button>
</div>
`;
